NEO-1317 : Mobile: "Share" and "View All Products" buttons are out of place : FIX : Fixed buttons

--- a/stylesheets/pages/blog-inner.less
+++ b/stylesheets/pages/blog-inner.less
@@ -252,6 +252,7 @@
             width: 12.5%;
         }
     }
+
     #mz-drop-zone-share-btn {
         .at-style-responsive .at-share-btn {
             display: flex;
@@ -270,6 +271,10 @@
 
             text-transform: uppercase;
             text-decoration: none;
+
+            @media (max-width: 992px) {
+                width: 140px;
+            }
 
             .at-icon-wrapper {
                 position: relative;
@@ -313,6 +318,11 @@
                     top: 0;
                     background: #fff;
                     height: 95%;
+                    font-size: 1.3rem;
+
+                    @media (max-width: 992px) {
+                        font-size: 1.5rem;
+                    }
                 }
             }
 
